# xiaozhi-esp32-server

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-pip  Dockerfile-server  Dockerfile-web  LICENSE  README.md  README_en.md  app.py  config.yaml  docker-compose-example.yml  docker-compose.yml  docker-setup.sh  paddlespeech-deploy.md  performance_tester.py  pyproject.toml  requirements.txt  run_webui.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-apk.yml  docker-image.yml
ZhiKongTaiWeb/: .env.development  .env.production  README.md  index.html  package-lock.json  package.json  vite.config.js
ZhiKongTaiWeb/src/: App.vue  main.js  style.css
config/: logger.py  private_config.py  settings.py
core/: auth.py  connection.py  http_server.py  server.py  websocket_server.py  webui.py
core/handle/: abortHandle.py  audioHandle.py  iotHandle.py  (+5 more)
docs/: Deployment-silm.md  Deployment.md  Deployment_all.md  Deployment_old.md  FAQ.md  IndexStreamTTS-deploy.md  TECHNICAL_OVERVIEW.md  TECHNICAL_OVERVIEW_CN.md  ali-sms-integration.md  contributor_open_letter.md  dev-ops-integration.md  docker-build.md  firmware-build-1.6.0.md  firmware-build.md  firmware-setting.md  fish-speech-integration.md  homeassistant-integration.md  index-stream-integration.md  mcp-endpoint-enable.md  mcp-endpoint-integration.md  mcp-vision-integration.md  newsnow_plugin_config.md  paddlespeech-deploy.md  performance_tester.md  sherpa-paraformer-guide.md  voiceprint-integration.md
main/: README.md  README_en.md  develop.md
manager/: http_server.py  session.py  user_manager.py
(+694 files in other folders)
